[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level5/Level5.gd" type="Script" id=3]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=4]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Numbers/6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Symbols/slash.png" type="Texture" id=8]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=9]

[node name="Level5" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="FadingLabel" parent="." index="4" instance=ExtResource( 2 )]
margin_left = 192.524
margin_top = 99.8964
margin_right = 920.524
margin_bottom = 124.896
bbcode_enabled = false
bbcode_text = ""
text = "It's a bit silent here, isn't it?"

[node name="FadingLabel2" parent="." index="5" instance=ExtResource( 2 )]
margin_left = 121.172
margin_top = 470.929
margin_right = 849.172
margin_bottom = 495.929
bbcode_enabled = false
bbcode_text = ""
text = "Ah, that's a lot better"

[node name="TextureRect" type="TextureRect" parent="." index="6"]
margin_left = 220.986
margin_top = 243.749
margin_right = 236.986
margin_bottom = 259.749
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="." index="7"]
margin_left = 327.366
margin_top = 241.502
margin_right = 343.366
margin_bottom = 257.502
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="." index="8"]
margin_left = 371.0
margin_top = 242.0
margin_right = 387.0
margin_bottom = 258.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="TextureRect5" type="TextureRect" parent="." index="9"]
margin_left = 274.176
margin_top = 243.0
margin_right = 290.176
margin_bottom = 259.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="." index="10"]
margin_left = 417.265
margin_top = 241.502
margin_right = 433.265
margin_bottom = 257.502
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="MovableButton" parent="." index="11" instance=ExtResource( 9 )]
margin_left = 966.351
margin_top = 12.1066
margin_right = 982.351
margin_bottom = 28.1066
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 8 )
text = ExtResource( 8 )
